# nmpde_non_linear_mechanics_solver

./: .gitignore  CMakeLists.txt  README.md  execute_monolithic_scalability.sh  execute_simulations.py  execute_simulations.sh  execute_sumulations_mesh.sh  execute_uncoupled_scalability.sh  mesh_dimensions.txt  parameters.config  result_uncoupled.csv  simulations_data.txt
include/: ChorinTemam.hpp  ConfigReader.hpp  IncrementalChorinTemam.hpp  Incremental_stokes.hpp  Linardo.hpp  MonolithicNavierStokes.hpp  SteadyNavierStokes.hpp  Stokes.hpp  UncoupledNavierStokes.hpp  includes_file.hpp  preconditioners.hpp
mesh/: Cylinder2D_coarse.msh  Cylinder2D_coarse_coarse.msh  Cylinder2D_fine.msh  Cylinder2D_fine_fine.msh  Cylinder2D_normal.msh  Cylinder3D.msh  Parallelepiped3D.msh
outputs/UncoupledNavierStokes2D/outputs_reynolds_100/: lift_drag_output.csv  (+8 more)
scripts/: generate_mesh.py  plot_lift_drag.ipynb
scripts/mesh_scripts/: Cube3D.geo  Cube3D_1.geo  Cube3D_2.geo  Cube3D_3.geo  Cube3D_4.geo  Cylinder2D.geo  Cylinder2D_coarse_coarse.geo  Cylinder2D_fine.geo  Cylinder2D_fine_fine.geo  Cylinder2D_normal copy.geo  Cylinder2D_super_fine.geo  Cylinder2D_super_super_fine.geo  Cylinder3D.geo  Parallelepiped3D.geo  Square2D.geo  Square2D_1.geo  Square2D_2.geo  Square2D_3.geo  cubeBenchmark3D.geo  mesh2D.geo  mesh3D-Cylinder.geo  mesh3D-Parallelepiped.geo  squareBenchmark2D.geo
src/: ChorinTemam.cpp  ConfigReader.cpp  EthierSteinman.cpp  IncrementalChorinTemam.cpp  MonolithicNavierStokes.cpp  SteadyNavierStokes.cpp  UncoupledNavierStokes.cpp  main.cpp  main_monolithic.cpp  main_uncoupled.cpp
src/steady_to_fix/: Incremental_stokes.cpp  Linardo.cpp  Stokes.cpp
